[workspace]

resolver = "2"

members = [
    "xrpl_types",
    "xrpl_api",
    "xrpl_address_codec",
    "xrpl_binary_codec",
    "xrpl_cli",
    "xrpl_http_client",
    "xrpl_ws_client",
]

[workspace.package]
version = "0.16.6"
edition = "2021"
authors = ["Georgios Moschovitis <george.moschovitis@gmail.com>"]

[workspace.dependencies]
ascii = "1.1.0"
assert_matches = "1.5.0"
enumflags2 = "0.7.7"
hex = "0.4"
libsecp256k1 = "0.7.1"
serde = "1"
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = "1"
tracing = "0.1"
