[workspace]

resolver = "2"

members = [
    "xrpl_types",
    "xrpl_api",
    "xrpl_address_codec",
    "xrpl_binary_codec",
    "xrpl_cli",
    "xrpl_http_client",
    "xrpl_ws_client",
]

[workspace.package]
version = "0.16.7"
edition = "2021"
authors = ["Georgios Moschovitis <george.moschovitis@gmail.com>"]

[workspace.dependencies]
ascii = { version = "1.1.0", default-features = false, features = ["alloc"] }
assert_matches = "1.5.0"
enumflags2 = { version = "0.7.7", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
libsecp256k1 = { version = "0.7.1" }
serde = { version = "1", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
thiserror = "1"
tokio = "1"
tracing = "0.1"
