[package]
name = "xrpl_address_codec"
description = "Binary serialization for XRPL Protocol addresses"
version = "0.9.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gmosx/xrpl_sdk_rust/tree/main/xrpl_address_codec"
keywords = ["xrpl", "ledger", "api", "protocol"]
authors = ["George Moschovitis <gmosx@reizu.org>"]

[dependencies]
