[package]
name = "xrpl_address_codec"
description = "Binary serialization for XRPL Protocol addresses"
version = "0.13.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/gmosx/xrpl-sdk-rust/tree/main/xrpl_address_codec"
keywords = ["xrpl", "ledger", "api", "protocol"]
authors = ["Georgios Moschovitis <george.moschovitis@gmail.com>"]

[dependencies]
