[package]
name = "xrpl_api"
description = "XRPL Protocol endpoints and resouces"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/gmosx/xrpl-sdk-rust/tree/main/xrpl_api"
keywords = ["xrpl", "ledger", "api", "protocol"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
enumflags2 = { workspace = true, features = ["serde"] }
xrpl_types = { path = "../xrpl_types", version = "0.16.6" }

[dev-dependencies]
assert_matches.workspace = true
