[package]
name = "xrpl_binary_codec"
description = "Binary serialization for XRPL Protocol objects"
version = "0.15.0"
license = "Apache-2.0"
repository = "https://github.com/gmosx/xrpl-sdk-rust/tree/main/xrpl_binary_codec"
keywords = ["xrpl", "ledger", "api", "protocol"]
authors = ["Georgios Moschovitis <george.moschovitis@gmail.com>"]
edition = "2021"

[dependencies]
serde_json = { version = "1", default-features = false }
hex = { version = "0.4", default-features = false }
sha2 = { version = "0.10.7", default-features = false }
libsecp256k1 = { version = "0.7.1", default-features = false, features = ["static-context", "hmac"] }
xrpl_types = { path = "../xrpl_types", version = "0.15", default-features = false }
thiserror = "1.0.44"

[features]
default = ["std"]
std = ["hex/std", "serde_json/std", "json"]
wasm32 = ["hex/alloc", "xrpl_types/wasm32", "serde_json/alloc", "json"]
json = []

[dev-dependencies]
ascii = "1.1.0"
assert_matches = "1.5.0"
enumflags2 = { version = "0.7.7" }
