[package]
name = "xrpl_binary_codec"
description = "Binary serialization for XRPL Protocol objects"
version = "0.15.0"
license = "Apache-2.0"
repository = "https://github.com/gmosx/xrpl-sdk-rust/tree/main/xrpl_binary_codec"
keywords = ["xrpl", "ledger", "api", "protocol"]
authors = ["Georgios Moschovitis <george.moschovitis@gmail.com>"]
edition = "2021"

[dependencies]
xrpl_types = { path = "../xrpl_types", version = "0.15", default-features = false }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.7", default-features = false }
libsecp256k1 = { version = "0.7.1", default-features = false, features = ["static-context", "hmac"] }
bytes = { version = "1.5.0", default-features = false }

# The following dependencies are only used when compiling for `no_std`.
[target.'cfg(not(target_feature = "std"))'.dependencies]
hashbrown = { version = "0.14.2", default-features = false, features = ["ahash"] }
spin = { version = "0.9.8", default-features = false, features = ["once"] }

[features]
default = ["std"]
std = ["hex/std", "serde_json/std"]
json = []

[dev-dependencies]
ascii = "1.1.0"
assert_matches = "1.5.0"
enumflags2 = { version = "0.7.7" }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
