[package]
name = "xrpl_cli"
description = "A CLI for the XRP Ledger"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/gmosx/xrpl-sdk-rust/tree/main/xrpl_http_client"
keywords = ["xrpl", "ledger", "cli"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
hex.workspace = true
libsecp256k1.workspace = true
prettytable-rs = "0.10"
rust_decimal = "1.32.0"
xrpl_binary_codec = { path = "../xrpl_binary_codec", version = "0.16.6" }
xrpl_types = { path = "../xrpl_types", version = "0.16.6" }
xrpl_api = { path = "../xrpl_api", version = "0.16.6" }
xrpl_http_client = { path = "../xrpl_http_client", version = "0.16.6" }

[dev-dependencies]
assert_matches.workspace = true

[[bin]]
name = "xrpl"
path = "src/main.rs"
