[package]
name = "xrpl_http_client"
description = "A strongly-typed client for the XRP Ledger JSONRPC API"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/gmosx/xrpl-sdk-rust/tree/main/xrpl_http_client"
keywords = ["xrpl", "ledger", "client", "jsonrpc", "api"]

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
reqwest = { version = "0.11.15", features = ["json"], default-features = false }
sha2.workspace = true
libsecp256k1.workspace = true
tracing.workspace = true
xrpl_types = { path = "../xrpl_types", version = "0.16.6" }
xrpl_api = { path = "../xrpl_api", version = "0.16.6" }
xrpl_binary_codec = { path = "../xrpl_binary_codec", version = "0.16.6" }

[features]
default = ["std"]
std = ["reqwest/default-tls"]
reqwest-default-tls = ["reqwest/default-tls"]
reqwest-rustls = ["reqwest/rustls-tls"]
