[package]
name = "xrpl_sdk_jsonrpc"
version = "0.6.0"
authors = ["George Moschovitis <gmosx@reizu.com>"]
edition = "2021"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.9"
libsecp256k1 = "0.5"
hex = "0.4" # TODO: remove?
bs58 = "0.4" # TODO: remove?
xrpl_types = { path = "../xrpl_types", version = "0.2" }
xrpl_binary_codec = { path = "../xrpl_binary_codec", version = "0.2" }