[package]
name = "xrpl_sdk_ws"
description = "A strongly-typed client for the XRP Ledger WebSocket API"
version = "0.3.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gmosx/xrpl_sdk_rust/tree/main/xrpl_sdk_jsonrpc"
keywords = ["xrpl", "ledger", "client", "websocket", "api"]
authors = ["George Moschovitis <gmosx@reizu.org>"]
edition = "2021"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-webpki-roots"] }
async-stream = "0.3"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
xrpl_types = { path = "../xrpl_types", version = "0.2" }
xrpl_api = { path = "../xrpl_api", version = "0.1" }
xrpl_binary_codec = { path = "../xrpl_binary_codec", version = "0.2" }
