[package]
name = "xrpl_types"
description = "Core types and related functions for the XRP Ledger"
version = "0.16.0"
license = "Apache-2.0"
repository = "https://github.com/gmosx/xrpl-sdk-rust/tree/main/xrpl_types"
keywords = ["xrpl", "ledger", "api"]
authors = ["Georgios Moschovitis <george.moschovitis@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
bs58 = { version = "0.5.0", default-features = false, features = [
    "alloc",
    "check",
] }
ascii = { version = "1.1.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
enumflags2 = { version = "0.7.7", default-features = false }

[features]
default = ["std"]
std = ["serde_json/std", "hex/std", "ascii/std"]

[dev-dependencies]
assert_matches = "1.5.0"
hex = "0.4.3"
