[package]
name = "xrpl_types"
description = "Core types and related functions for the XRP Ledger"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/gmosx/xrpl-sdk-rust/tree/main/xrpl_types"
keywords = ["xrpl", "ledger", "api"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bs58 = { version = "0.5.0", default-features = false, features = [
    "alloc",
    "check",
] }
ascii = { workspace = true }
hex = { workspace = true }
enumflags2 = { workspace = true }

[features]
default = ["std"]
std = ["serde_json/std", "hex/std", "ascii/std"]

[dev-dependencies]
assert_matches.workspace = true
